add list of output keys

--- a/_static/assets/crds/tool.yaml
+++ b/_static/assets/crds/tool.yaml
@@ -121,6 +121,12 @@ spec:
                   provider:
                     type: string
                     description: 'Provider which issued the Error'
+              outputs:
+                type: array
+                description: 'List of Outputs exposed by this Tool'
+                items:
+                  type: string
+                  maxLength: 128
 
     additionalPrinterColumns:
     - name: Phase
