date type is not valid
according to k8s docs it is but api-server returns bad request

--- a/_static/assets/crds/tool.yaml
+++ b/_static/assets/crds/tool.yaml
@@ -118,7 +118,8 @@ spec:
                 - name
                 properties:
                   createdAt:
-                    type: date
+                    type: string
+                    format: date-time
                   name:
                     type: string
               error:
