--- a/_static/assets/crds/tool.yaml
+++ b/_static/assets/crds/tool.yaml
@@ -100,6 +100,8 @@ spec:
             - ready
             - phase
             properties:
+              checksum:
+                type: string
               ready:
                 type: boolean
                 default: false
