--- a/_static/assets/crds/tool.yaml
+++ b/_static/assets/crds/tool.yaml
@@ -91,6 +91,18 @@ spec:
                         properties:
                           name:
                             type: string
+                  
+                  webhooks:
+                    type: object
+                    properties:
+                      discord:
+                        type: object
+                        required:
+                        - url
+                        properties:
+                          url: string
+                          maxLength: 128
+                  
               input:
                 x-kubernetes-preserve-unknown-fields: true
 
